--- a/Android Bridge/res/values/strings.xml
+++ b/Android Bridge/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Bridge</string>
-    <string name="title_activity_client">ClientActivity</string>
+    <string name="title_activity_bridge">BridgeActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
