--- a/Android Bridge/res/values/strings.xml
+++ b/Android Bridge/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="title_activity_bridge">BridgeActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_login">Login</string>
+    <string name="enter_login">Sign-in</string>
+    <string name="prompt_username">Username</string>
 
 </resources>
