--- a/Android Bridge/res/values/strings.xml
+++ b/Android Bridge/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="title_activity_login">Login</string>
     <string name="enter_login">Sign-in</string>
     <string name="prompt_username">Username</string>
+    <string name="title_activity_game_room">GameRoomActivity</string>
+    <string name="login_icon">loginIcon</string>
 
 </resources>
